  option or when stderr does not refer to a TTY. This allows IDEs and terminals
  to share cached compilation results.

- Added optional logging to syslog.

- The compiler option `-fmodules` is now handled in “depend mode”. If “depend
  mode” is disabled the option is still considered too hard and ccache will
  fall back to running the compiler.

- `realpath(3)` is no longer used for normalization when computing relative
  paths. This makes it possible to get cache hits when the source or build
  directory is a symbolic link to an absolute path that includes unstable
  information like build IDs or timestamps.

- Added a new `ignore_options` (`CCACHE_IGNOREOPTIONS`) configuration option
  which makes it possible to exclude compiler options from the hash.

- Added an `absolute_paths_in_stderr` (`CCACHE_ABSSTDERR`) configuration option
  which, if set, makes ccache rewrite absolute paths in compiler warnings and
  errors to relative.

- Improved handling of umask. The configured `umask` (`CCACHE_UMASK`) is now
  only applied to files and directories in the cache directory. Previously the
  umask was applied to all files produced by ccache and the executed compiler.

- Ccache is now able to share cache entries for different object file names
  when using `-MD` or `-MMD`.

- Clang’s `-Xclang` (used by CMake for precompiled headers),
  `-fno-pch-timestamp`, `-emit-pch`, `-emit-pth` and `-include-pth` options are
  now understood.

- Added support for the HIP (“C++ Heterogeneous-Compute Interface for
  Portability”) language.

- The manifest format now allows for header files larger than 4 GiB.

- Made it possible to once again cache compilations with `__DATE__` in the
  source code.

- Added handling of the `__TIMESTAMP__` macro.

- An absolute input source path is now rewritten to a relative path when using
  `base_dir`.

- `waitpid` system calls interrupted by a signal are now handled correctly.
