@@ -53,8 +53,9 @@ enum class FileType : UnderlyingFileTypeInt {
   // Text sent to standard output.
   stderr_output = 2,
 
-  // Coverage notes file generated by -ftest-coverage.
-  coverage = 3,
+  // Coverage notes file generated by -ftest-coverage with filename in unmangled
+  // form, i.e. output file but with a .gcno extension.
+  coverage_unmangled = 3,
 
   // Stack usage file generated by -fstack-usage, i.e. output file but with a
   // .su extension.
@@ -66,9 +67,17 @@ enum class FileType : UnderlyingFileTypeInt {
   // DWARF object file geenrated by -gsplit-dwarf, i.e. output file but with a
   // .dwo extension.
   dwarf_object = 6,
+
+  // Coverage notes file generated by -ftest-coverage with filename in mangled
+  // form, i.e. full output file path but with a .gcno extension and with
+  // slashes replaced with hashes.
+  coverage_mangled = 7,
 };
 
 const char* file_type_to_string(FileType type);
+
+std::string gcno_file_in_mangled_form(const Context& ctx);
+std::string gcno_file_in_unmangled_form(const Context& ctx);
 
 // This class knows how to read a result cache entry.
 class Reader
