@@ -866,6 +866,44 @@ create_cachedir_tag(const Context& ctx)
   }
 }
 
+struct FindCoverageFileResult
+{
+  bool found;
+  std::string path;
+  bool mangled;
+};
+
+static FindCoverageFileResult
+find_coverage_file(const Context& ctx)
+{
+  // GCC 9+ writes coverage data for /dir/to/example.o to #dir#to#example.gcno
+  // (in CWD) if -fprofile-dir=DIR is present (regardless of DIR) instead of the
+  // traditional /dir/to/example.gcno.
+
+  std::string mangled_form = Result::gcno_file_in_mangled_form(ctx);
+  std::string unmangled_form = Result::gcno_file_in_unmangled_form(ctx);
+  std::string found_file;
+  if (Stat::stat(mangled_form)) {
+    log("Found coverage file {}", mangled_form);
+    found_file = mangled_form;
+  }
+  if (Stat::stat(unmangled_form)) {
+    log("Found coverage file {}", unmangled_form);
+    if (!found_file.empty()) {
+      log("Found two coverage files, cannot continue");
+      return {};
+    }
+    found_file = unmangled_form;
+  }
+  if (found_file.empty()) {
+    log("No coverage file found (tried {} and {}), cannot continue",
+        unmangled_form,
+        mangled_form);
+    return {};
+  }
+  return {true, found_file, found_file == mangled_form};
+}
+
 // Run the real compiler and put the result in cache.
 static void
 to_cache(Context& ctx,
@@ -1019,16 +1057,14 @@ to_cache(Context& ctx,
     result_writer.write(Result::FileType::dependency, ctx.args_info.output_dep);
   }
   if (ctx.args_info.generating_coverage) {
-    if (!Stat::stat(ctx.args_info.output_cov)) {
-      // The .gcno file is missing. This is likely due to compiling with GCC 9+,
-      // which uses another name for the .gcno file when using -ftest-coverage
-      // or --coverage when -fprofile-dir=dir is given. The .gcno file is still
-      // placed next to the object file, not in the specified profile directory,
-      // though.
-      log("{} is missing", ctx.args_info.output_cov);
-      throw Failure(Statistic::unsupported_compiler_option);
+    const auto coverage_file = find_coverage_file(ctx);
+    if (!coverage_file.found) {
+      throw Failure(Statistic::internal_error);
     }
-    result_writer.write(Result::FileType::coverage, ctx.args_info.output_cov);
+    result_writer.write(coverage_file.mangled
+                          ? Result::FileType::coverage_mangled
+                          : Result::FileType::coverage_unmangled,
+                        coverage_file.path);
   }
   if (ctx.args_info.generating_stackusage) {
     result_writer.write(Result::FileType::stackusage, ctx.args_info.output_su);
@@ -2285,7 +2321,7 @@ do_cache_compilation(Context& ctx, const char* const* argv)
     log("Dependency file: {}", ctx.args_info.output_dep);
   }
   if (ctx.args_info.generating_coverage) {
-    log("Coverage file: {}", ctx.args_info.output_cov);
+    log("Coverage file is being generated");
   }
   if (ctx.args_info.generating_stackusage) {
     log("Stack usage file: {}", ctx.args_info.output_su);
